accor_poc/redemption-infra/k8s/00-namespace-serviceaccount.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redemption
  labels:
    name: redemption
